<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=NONE] -->
    <string name="app_name">Just Java</string>
    <string name="name"> Name </string>
    <string name="toppings"> Toppings </string>
    <string name="whipped_cream"> Whipped Cream </string>
    <string name="chocolate"> Chocolate </string>
    <string name="quantity"> Quantity </string>
    <string name="initial_quantity_value"> "0" </string>
    <string name="order"> Order </string>
    <string name="order_summary_name"> Name: <xliff:g id="name" example="Priya">%s</xliff:g> </string>
    <string name="order_summary_chocolate"> Add Chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_whip"> Add Whipped Cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity"> Quantity: <xliff:g id="quantity" example="1">%d</xliff:g> </string>
    <string name="total">Total: $ <xliff:g id="price" example="10">%d</xliff:g></string>
    <string name="thank_you"> Thank You! </string>

    <string name="decrement_toast">  Minimum order should be 1 coffee! </string>
    <string name="increment_toast"> Reached maximum order of 100 Coffees!" </string>



    <string name="order_email_sub"> JustJava order for <xliff:g id="name" example="Priya">%s</xliff:g> </string>


</resources>
